--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -7,6 +7,11 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+@media screen and (max-width: 736px){
+	#team-flex { flex-wrap: wrap;  }
+	#team-flex > * { flex-basis: 100% !important;}
+  }
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -17,7 +22,7 @@ form, label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
+section, summary, time, mark, audio, video, button {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -2796,7 +2801,7 @@ input, select, textarea {
 
 	#footer {
 		background-attachment: scroll;
-		background-color: #4eb980;
+		background-color: #402B43;
 		background-image: url("images/bottom-3200.svg");
 		background-position: top center;
 		background-repeat: repeat-x;
@@ -2905,7 +2910,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		padding: 6em 0 5em 0;
+		padding: 0 0 0 0;
 		position: relative;
 		z-index: 1;
 	}
@@ -2916,7 +2921,7 @@ input, select, textarea {
 			height: 100%;
 			left: 50%;
 			position: absolute;
-			top: 0;
+			top: -20;
 			width: 1px;
 			z-index: -1;
 		}
@@ -2953,7 +2958,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 8em 0 16em 0;
+				padding: 5em 0 10em 0;
 			}
 
 				#header h1 {
