--- a/website/assets/sass/main.scss
+++ b/website/assets/sass/main.scss
@@ -27,6 +27,7 @@
 		#team-flex { flex-wrap: wrap;  }
 		#team-flex { flex-basis: 100% !important; }
 		#team-flex { gap: 5vh !important; }
+		#logo {width:20%  !important;}
 	  }
 // Reset.
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
